# capellawish

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  docker-compose.yml  hypercornconfig.toml  manage.py  nginxdev.conf  pyproject.toml
account/: adapter.py  admin.py  apps.py  email.py  models.py  serializers.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_wishlistuser_bio_wishlistuser_profile_image_and_more.py  0003_merge_20251105_0751.py  0004_alter_wishlistuser_profile_image.py  0005_wishlistuser_birthday.py
capellawish/: asgi.py  celery.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
capellawish/locale/ko/LC_MESSAGES/: django.po
crawler/: crawler.py  tasks.py
list/: models.py  serializers.py  urls.py  views.py
list/migrations/: 0001_initial.py  0002_alter_listmodel_image.py
locale/ko/LC_MESSAGES/: django.po
templates/account/email/: base_message.txt
tests/: conftest.py  test_main.py  test_wishlist_item.py
wishlist/: models.py  pagination.py  serializers.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py  0002_alter_itemsource_uuid_alter_wishitem_uuid.py  0002_itemsource_wishlist_it_wish_it_02ddfc_idx_and_more.py  0003_alter_itemsource_source_url.py  0003_remove_itemsource_idx_item_source_item_url_and_more.py  0004_blobimage_alter_wishitem_image.py  0005_blobimage_url_blobimage_idx_blobimage_url.py
