[project]
name = "capellawish"
version = "0.1.0"
description = "A simple wish list web application built with Django and DRF."
requires-python = ">=3.13"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=5.2.8",
    "django-allauth[socialaccount]>=65.13.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-guardian>=3.2.0",
    "django-post-office>=3.10.1",
    "django-silk[formatting]>=5.4.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt[crypto]>=5.5.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "hypercorn[h3]>=0.18.0",
    "markdown>=3.10",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "pytest>=9.0.0",
    "pytest-django>=4.11.1",
    # "scalar_doc>=0.1.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "capellawish.settings"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration"
]
python_files = [
    "test_*.py",
    "*_test.py",
    "*_tests.py"
]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
